<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <CheckBoxPreference android:title="@string/low_title" android:key="preflow" android:summary="@string/low_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/full_title" android:key="preffull" android:summary="@string/full_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/charge_title" android:key="prefcharge" android:summary="@string/charge_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/discharge_title" android:key="prefdischarge" android:summary="@string/discharge_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_title">
        <RingtonePreference android:title="@string/sound_low_title" android:key="low_sound" android:summary="@string/sound_low_summary" android:ringtoneType="notification" android:showDefault="true" android:showSilent="true" />
        <RingtonePreference android:title="@string/sound_full_title" android:key="full_sound" android:summary="@string/sound_full_summary" android:ringtoneType="notification" android:showDefault="true" android:showSilent="true" />
        <RingtonePreference android:title="@string/sound_charge_title" android:key="charge_sound" android:summary="@string/sound_charge_summary" android:ringtoneType="notification" android:showDefault="true" android:showSilent="true" />
        <RingtonePreference android:title="@string/sound_discharge_title" android:key="discharge_sound" android:summary="@string/sound_discharge_summary" android:ringtoneType="notification" android:showDefault="true" android:showSilent="true" />
    </PreferenceCategory>
</PreferenceScreen>
